src/test/ui/rfc-0107-bind-by-move-pattern-guards/feature-gate.no_gate.stderr
error[E0008]: cannot bind by-move into a pattern guard
  --> $DIR/feature-gate.rs:33:16
   |
LL |         A { a: v } if *v == 42 => v,
   |                ^ moves value into pattern guard

error: aborting due to previous error

For more information about this error, try `rustc --explain E0008`.
